--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,32 @@
+body,
+body[data-theme="light"] {
+  --color-text-primary: hsl(200, 15%, 8%);
+  --color-text-secondary: #076963;
+  --color-bg-primary: hsl(0, 0%, 98%);
+  --color-bg-toggle: #1e90ff;
+}
+
+body[data-theme="dark"] {
+  --color-text-primary: hsl(0, 0%, 100%);
+  --color-text-secondary: #ff6b00;
+  --color-bg-primary: hsl(207, 26%, 17%);
+  --color-bg-toggle: #a9a9a9;
+}
+
 html,
 body {
+  background-color: var(--color-bg-primary);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  color: var(--color-text-primary);
+}
+
+input[type="text"], textarea, option {
+
+  background-color : var(--color-bg-primary); 
+  color: var(--color-text-primary);
 }
 
 a {
