Add some styling for CountryBox

--- a/styles/CountryBox.module.css
+++ b/styles/CountryBox.module.css
@@ -1,9 +1,16 @@
 .CountryBox {
-    border: 1px black solid;
-    margin: 10px 0;
-    width: 250px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin: 10px 10px;
+    width: 80%;
+    background-color: var(--color-bg-secondary);
+}
+
+@media screen and (min-width: 460px) {
+    .CountryBox {
+        width: 350px;
+    }
 }
 
 .details {
-    padding: 0 5px;
+    padding: 1em 1em;
 }
