--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,3 +3,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+@media screen and (min-width: 460px) {
+    .countriesList {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+}
