--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,8 +28,9 @@ body {
 input[type="text"],
 textarea,
 option {
-  background-color: var(--color-bg-primary);
+  background-color: var(--color-bg-secondary);
   color: var(--color-text-primary);
+  border-color: var(--color-bg-secondary);
 }
 
 a {
