--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,5 +1,14 @@
 .header {
   display: flex;
+  justify-content: space-between;
+  padding: 1em;
+  background-color: var(--color-bg-secondary);
+  margin-bottom: 0.5em;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.header h1 {
+  font-size: 1.5em;
 }
 
 .headerActions {
