--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -8,7 +8,13 @@
 }
 
 .header h1 {
-  font-size: 1.5em;
+  font-size: 1em;
+}
+
+@media screen and (min-width: 460px) {
+  .header h1 {
+    font-size: 1.5rem;
+  }
 }
 
 .headerActions {
