--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,9 +20,10 @@ body {
   background-color: var(--color-bg-primary);
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Nunito Sans, Ubuntu, Cantarell, Fira Sans,
+    Droid Sans, Helvetica Neue, sans-serif;
   color: var(--color-text-primary);
+  font-size: 14px;
 }
 
 input[type="text"],
