--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,6 +34,12 @@ option {
   border-color: var(--color-bg-secondary);
 }
 
+button {
+  background-color: var(--color-bg-secondary);
+  border: none;
+  color: var(--color-text-primary);
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -41,4 +47,10 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.icon {
+  font-size: 1rem;
+  color: var(--color-text-primary);
+  margin-right: 0.5rem;
 }
