--- a/styles/SearchForm.module.css
+++ b/styles/SearchForm.module.css
@@ -3,6 +3,17 @@
   flex-direction: column;
 }
 
+@media screen and (min-width: 760px) {
+  .searchForm {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .search {
+    flex-basis: 40%;
+  }
+}
+
 .search {
   width: 100%;
   position: relative;
@@ -20,4 +31,14 @@
 .searchInput {
   width: calc(100% - 2rem);
   margin: 0;
+}
+
+.regionInput {
+  height: 3rem;
+  width: 180px;
+  margin: 1rem;
+  border: 0px solid var(--color-bg-secondary);
+  box-shadow: rgb(0 0 0 / 24%) 0px 3px 8px;
+  border-radius: 5px;
+  padding: 0.5rem;
 }
