--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,7 +30,8 @@ body {
 
 input[type="text"],
 textarea,
-select {
+select,
+option {
   background-color: var(--color-bg-secondary);
   color: var(--color-text-primary);
   border-color: var(--color-bg-secondary);
