--- a/styles/CountryBox.module.css
+++ b/styles/CountryBox.module.css
@@ -3,6 +3,7 @@
   margin: 10px 10px;
   width: 80%;
   background-color: var(--color-bg-secondary);
+  border-radius: 5px;
 }
 
 @media screen and (min-width: 460px) {
